# loommux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  loommux_workspace.py  loommux_workspace.py.example  mcp_ipython_client.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: coding-agent-control-plane-design.md  ipython-mcp-adapter-design.md  ipython-mcp-cell-control-directive-design.md  ipython-mcp-cell-control-magic-design.md  ipython-mcp-execution-control-plane-design.md  ipython-mcp-freeform-run-python-design.md  ipython-mcp-full-output-directive-design.md  ipython-mcp-multimodal-output-design.md  ipython-mcp-output-surface-design.md  ipython-mcp-protected-multiline-string-design.md  ipython-output-log-reader-design.md  loommux IPython MCP 双 Server 通道策略正式设计.md  mcp-connections.md  workspace-configuration.md  关于Ipython.md  双通道序列化最终设计.md  双通道序列化设计.md
docs/superpowers/plans/: 2026-07-11-codex-workspace-discovery.md
examples/workspace-resolvers/: codex.py  generic.py
monitor/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsdown.server.config.ts  vite.config.ts
monitor/docs/: loommux monitor 协调状态.md  loommux monitor 完整设计汇总.md  loommux monitor 实施计划.md  loommux monitor 审核标准.md  loommux monitor 执行者提示词.md
monitor/e2e/: monitor.spec.ts
monitor/src/client/: App.test.tsx  App.tsx  events.ts  main.tsx  state.ts  styles.css
monitor/src/server/: app.test.ts  app.ts  events.ts  index.ts
monitor/src/shared/: schema.ts  types.ts
src/loommux/: __init__.py  adapter.py  cell_control.py  codex_workspace_resolver.py  coding_agent_kernel.py  execution.py  host_workspace_config.py  kernel_magic.py  kernel_runtime.py  kernel_session.py  mcp_ipython_content_server.py  mcp_ipython_server.py  mcp_result_policy.py  mcp_server_factory.py  monitoring.py  output_log.py  presentation.py  server_entrypoints.py  source_transform.py  terminal_text.py  workspace_config.py  workspace_resolver.py
tests/: conftest.py  test_apply_patch_literals.py  test_coding_agent_kernel.py  test_ipython_mcp_adapter_blackbox.py  test_ipython_mcp_content_server.py  test_ipython_mcp_freeform.py  test_ipython_mcp_monitor_events.py  test_ipython_mcp_server.py  test_mcp_server_entrypoints.py  test_monitoring.py  test_output_log.py  test_presentation.py  test_protected_multiline_strings.py  test_terminal_text.py  test_workspace_config.py
