[project]
name = "loommux"
version = "0.1.11"
description = "Persistent IPython MCP server with inspectable execution output"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "MichengLiang" }]
keywords = ["ipython", "jupyter", "mcp", "model-context-protocol", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "fastmcp>=3.2.4",
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/MichengLiang/loommux"
Repository = "https://github.com/MichengLiang/loommux"
Issues = "https://github.com/MichengLiang/loommux/issues"

[project.scripts]
loommux = "loommux.mcp_ipython_server:main"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pillow>=10.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loommux"]

[tool.hatch.build.targets.sdist]
# An explicit source allowlist keeps workspace experiments out of the PyPI
# source archive.
include = [
    "/src/loommux",
    "/tests",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/SECURITY.md",
    "/examples",
    "/mcp_ipython_client.py",
]

# ========================================
# Basedpyright - 目录级别类型检查 (新策略：默认推荐)
# ========================================
[tool.basedpyright]
# 全局默认：推荐模式

# BasedPyright 支持以下几种类型检查模式：
# off - 完全关闭类型检查
# basic - 基本类型检查
# standard - 标准类型检查
# strict - 严格类型检查
# recommended - 推荐类型检查
# all - 最严格的类型检查（BasedPyright 特有）

typeCheckingMode = "standard"
pythonVersion = "3.10"
include = ["src"]
exclude = [
    "**/__pycache__",
    "tests",
    "tests/**",
    "**/tests",
    "**/tests/**",
    "**/test_*.py",
    "**/*_test.py",
    "**/.venv"
]

# 其他配置保持默认即可
reportMissingTypeStubs = false
enableTypeIgnoreComments = false # 不强制要求第三方库的类型存根
enableReachabilityAnalysis = false # 禁用旧的可达性分析标记 推荐使用更准确的 reportUnreachable 诊断规则

# 将不可达代码报告设置为 "none" 以完全禁用此检查 
reportUnreachable = "none"

executionEnvironments = [

]

# ========================================
# Ruff - 目录级别代码规范
# ========================================
[tool.ruff]
line-length = 320
target-version = "py310"

[tool.ruff.lint]
# 全局启用严格规则
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations（类型注解）
    "C4",     # flake8-comprehensions
]

# 忽略特定规则
ignore = [
    "B008",   # typer.Argument在默认参数中是合法用法
    "E501",
]

# 针对测试文件的特殊配置
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # 测试文件不强制类型注解
    "B017",    # pytest.raises(Exception) is acceptable in tests
    "E402",    # Module level import not at top (allowed in tests)
    "E501",    # Line too long (test assertions can be long)
    "F841",    # Unused local variable (test fixtures)
    "D",      # 也可以考虑忽略 Docstrings
    "S101",   # 允许使用 assert (测试必备)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========================================
# Pytest - 测试配置
# ========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
timeout = 15
timeout_method = "thread"
addopts = [
    "-v",              # verbose
    "--tb=short",
    "--cov=loommux",  # 修改为正确的模块路径
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

# 为不同类型的测试设置标记
markers = [
]
